<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- The user visible name of the application. [CHAR LIMIT=20] -->
    <string name="application_name">ExoPlayer Demo</string>

    <string name="enable_background_audio">Play in background</string>

    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>

    <string name="logging_normal">Normal</string>

    <string name="logging_verbose">Verbose</string>

    <string name="retry">Retry</string>

    <string name="off">[off]</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <!-- Master Manifest -->
    <string name="master_manifest">Manifest</string>
    <string name="manifest_type">Type: %s</string>
    <string name="manifest_base_uri">Base URI: %s</string>
    <string name="manifest_muxed_audio_lang">Muxed Audio Language: %s</string>
    <string name="manifest_muxed_caption_lang">Muxed Caption Language: %s</string>
    <string name="manifest_variants">VARIANTS</string>
    <string name="manifest_audios">AUDIOS</string>
    <string name="manifest_subtitles">SUBTITLES</string>

    <string name="variant_format">FORMAT</string>
    <string name="variant_url">URL: %s</string>
    <string name="variant_id">ID: %s</string>
    <string name="variant_mime_type">Mime Type: %s</string>
    <string name="variant_bitrate">Bitrate: %d</string>
    <string name="variant_audio_channels">Audio Channels: %d</string>
    <string name="variant_audio_sampling_rate">Audio Sampling Rate: %d</string>
    <string name="variant_codecs">Codecs: %s</string>
    <string name="variant_language">Language: %s</string>
    <string name="variant_width">Width: %d</string>
    <string name="variant_height">Height: %d</string>
    <string name="variant_frame_rate">Frame Rate: %f</string>

    <!--Media Manifest-->
    <string name="manifest_segments">Segments</string>
    <string name="manifest_media_sequence">Media Sequence: %d</string>
    <string name="manifest_target_duration">Target Duration Secs: %d</string>
    <string name="manifest_version">Version: %d</string>
    <string name="manifest_live">Live: %b</string>
    <string name="manifest_duration">Duration Us: %d</string>

    <string name="segment_url">URL: %s</string>
    <string name="segment_duration">Duration Secs: %f</string>
    <string name="segment_discontinuity">Discontinuity Sequence #: %d</string>
    <string name="segment_start_time">Start Time Us: %d</string>
    <string name="segment_encrypted">Encrypted: %b</string>
    <string name="segment_encryption_key">Encryption Key Uri: %s</string>
    <string name="segment_encryption_IV">Encryption IV: %s</string>
    <string name="segment_byterange_offset">Byterange Offset: %d</string>
    <string name="segment_byterange_length">Byterange Length: %d</string>

    <string name="button_continue">Continue</string>
    <string name="button_clear">Clear</string>
    <string name="hint">Enter video url</string>
</resources>
