<?xml version="1.0" encoding="utf-8"?>
<com.google.android.exoplayer.demo.debug.VideoDebugView android:id="@+id/debug_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#88000000"
    android:orientation="vertical">

    <TextView
        android:id="@+id/player_state_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/debug_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/controls_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/video_controls"
            style="@style/DemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:visibility="gone" />

        <Button
            android:id="@+id/audio_controls"
            style="@style/DemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio"
            android:visibility="gone" />

        <Button
            android:id="@+id/text_controls"
            style="@style/DemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:visibility="gone" />

        <Button
            android:id="@+id/master_manifest"
            style="@style/DemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_manifest" />

        <Button
            android:id="@+id/retry_button"
            style="@style/DemoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:visibility="gone" />

    </LinearLayout>

</com.google.android.exoplayer.demo.debug.VideoDebugView>